fixed wrapper gap & removed navbar diff colors

--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -1,8 +1,5 @@
 /* ----------- Media Queries ---------- */
 @media (max-width: 485px) {
-    .navbar-mobile {
-        background: #f00 !important;
-    }
     .login-window {
         width: 10rem;
         height: 15rem;
@@ -284,9 +281,6 @@
 }
 
 @media (min-width: 485px) {
-    .navbar-mobile {
-        background: #0f0 !important;
-    }
     .login-window {
         width: 10rem;
         height: 16rem;
@@ -440,6 +434,11 @@
         width: 3rem;
     }
 
+    .wrapper {
+        margin-top: 1.5rem;
+        gap: 1.3rem;
+    }
+
     #banner,
     .wrapper-items {
         width: 98%;
@@ -500,13 +499,13 @@
     }
 
     .bottom-section {
-        height: 15rem;
+        height: 12rem;
         padding: 1rem;
         gap: 1rem;
     }
 
     .bottom-section #left-part {
-        gap: 0.3rem;
+        gap: 0.8rem;
     }
 
     #left-part div {
@@ -567,9 +566,6 @@
 }
 
 @media (min-width: 812px) {
-    .navbar {
-        background: #ff0 !important;
-    }
     .login-window {
         width: 30rem;
         height: 25rem;
